; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_check_desa_imm_op.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_check_desa_imm_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i64, i64 }

@check_desa_imm_op.fn = internal global [8 x i8] c"IIIIIIII", align 1
@d = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@MODE_ABSW = common dso_local global i64 0, align 8
@MODE_IMM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_desa_imm_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_desa_imm_op() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 111, i32* %2, align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 0), align 8
  %4 = and i32 %3, 256
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %15, label %6

6:                                                ; preds = %0
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 1), align 4
  %9 = shl i32 1, %8
  %10 = and i32 %7, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %6
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 2), align 8
  %14 = icmp eq i32 %13, 3
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %6, %0
  store i32 0, i32* %1, align 4
  br label %38

16:                                               ; preds = %12
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 1), align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds [8 x i8], [8 x i8]* @check_desa_imm_op.fn, i64 0, i64 %18
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = call i32 @desa_ascii(i32 %21)
  %23 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 3), align 4
  %24 = shl i32 %23, 8
  %25 = add nsw i32 %24, 32
  %26 = call i32 @desa_ascii(i32 %25)
  %27 = load i64, i64* @MODE_ABSW, align 8
  %28 = load i64, i64* @MODE_IMM, align 8
  %29 = load i64, i64* @MODE_ABSW, align 8
  %30 = sub nsw i64 %28, %29
  %31 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 3), align 4
  %32 = call i32 @get_ea_2(i64 %27, i64 %30, i32 %31)
  %33 = call i32 @desa_char(i8 signext 44)
  %34 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 5), align 8
  %35 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 4), align 8
  %36 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 3), align 4
  %37 = call i32 @get_ea_2(i64 %34, i64 %35, i32 %36)
  store i32 1, i32* %1, align 4
  br label %38

38:                                               ; preds = %16, %15
  %39 = load i32, i32* %1, align 4
  ret i32 %39
}

declare dso_local i32 @desa_ascii(i32) #1

declare dso_local i32 @get_ea_2(i64, i64, i32) #1

declare dso_local i32 @desa_char(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
